crates/lanekeep-report/tests/snapshots/snapshots__agent.snap
---
source: crates/lanekeep-report/tests/snapshots.rs
expression: "rendered(Format::Agent)"
---
4 violation(s) across 2 rule(s).

## lanekeep/no-default-export
default export
Fix: use a named export, so the symbol has one name every importer must use
Bad:  export default function parse() {}
Good: export function parse() {}
At:
  src/a.ts:2:1
  src/a.ts:9:1
  src/deep/c.ts:4:7

## lanekeep/no-restricted-imports
restricted import
Fix: import something permitted here, or move this code where it is allowed
Bad:  import Stripe from 'stripe'
Good: import { charge } from '@app/payments'
At:
  src/b.ts:1:1 — importing 'lodash/merge' is restricted — use the standard library
