crates/lanekeep-report/tests/snapshots/snapshots__agent_when_clean.snap
---
source: crates/lanekeep-report/tests/snapshots.rs
expression: "render(Format::Agent, Color::Never, &[], summary(), &Cards::new())"
---
No violations.
