crates/lanekeep-report/tests/snapshots/snapshots__human_when_clean.snap
---
source: crates/lanekeep-report/tests/snapshots.rs
expression: "render(Format::Human, Color::Never, &[], summary(), &Cards::new())"
---
✔ no violations in 12 file(s)
