crates/lanekeep-report/tests/snapshots/snapshots__warn_only_changes_the_summary.snap
---
source: crates/lanekeep-report/tests/snapshots.rs
expression: "render(Format::Human, Color::Never, &corpus(), Summary\n{ warn_only: true, ..summary() }, &cards())"
---
src/a.ts:2:1 error [lanekeep/no-default-export] default export
  → use a named export, so the symbol has one name every importer must use
src/a.ts:9:1 error [lanekeep/no-default-export] default export
  → use a named export, so the symbol has one name every importer must use
src/deep/c.ts:4:7 error [lanekeep/no-default-export] default export
  → use a named export, so the symbol has one name every importer must use
src/b.ts:1:1 warn [lanekeep/no-restricted-imports] importing 'lodash/merge' is restricted — use the standard library
  → import something permitted here, or move this code where it is allowed

⚠ 3 error(s), 1 warning(s) across 3 file(s) checked — warn-only, not blocking
